--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,33 +1,23 @@
-# This is a basic workflow to help you get started with Actions
-
-name: Ram
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
- 
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+name: Downloadable Archive Ready
+on: 
+  push:
+    tags:
+      - '*'
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    permissions:
+      contents: write
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: 'Get latest release'
-        run: |
-          echo hello
-      - uses: pozetroninc/github-action-get-latest-release@master
-        with:
-          owner: sriramab
-          repo: wbafrica
-        
+    - uses: actions/checkout@v2
+    - name: Archive Release
+      uses: vimtor/action-zip@v1.1
+      with:
+        files: FlowMax-Q.zip
+        recursive: false
+        dest: FlowMax-Q.zip
+    - name: Upload Release
+      uses: ncipollo/release-action@v1.12.0
+      with:
+        artifacts: "FlowMax-Q.zip"
+        token: ${{ secrets.GITHUB_TOKEN }}
