--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,8 +15,22 @@ jobs:
         files: FlowMax-Q.zip
         recursive: false
         dest: FlowMax-Q.zip
-    - name: Upload Release
+        
+    
+
+    - name: Generate release tag
+      id: generate_release_tag
+      uses: amitsingh-007/next-release-tag@v5.0.0
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        tag_prefix: 'v'
+        tag_template: 'yyyy.mm.dd.i'
+
+    - name: Create Release
       uses: ncipollo/release-action@v1.12.0
       with:
+        tag: ${{ steps.generate_release_tag.outputs.next_release_tag }}
+        generateReleaseNotes: true
+        makeLatest: true
         artifacts: "FlowMax-Q.zip"
         token: ${{ secrets.GITHUB_TOKEN }}
