--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,7 +23,7 @@ jobs:
       uses: amitsingh-007/next-release-tag@v5.0.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        tag_prefix: 'v'
+        tag_prefix: 'FlowMax-Q-'
         tag_template: 'yyyy.mm.dd.i'
 
     - name: Create Release
